# rio_discord_bot

./: .gitignore  Makefile  pyproject.toml  setup.cfg
.github/workflow/: pr_build.yml
.github/workflows/: ci.yml
rio_discord_bot/: discord_client.py  rio_client.py
tests/: test_rio_client.py
