[tool.poetry]
name = "rio_discord_bot"
version = "0.0.1"
description = "Small bot that posts in a discord channel a rank from information found in Raider.io"
authors = ["Kevin Robayna <me@kevinrobayna.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
