[tool.poetry]
name = "rio_discord_bot"
version = "0.0.1"
description = "Small bot that posts in a discord channel a rank from information found in Raider.io"
authors = ["Kevin Robayna <me@kevinrobayna.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ratelimit = "^2.2"
requests = "^2.24"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-mock = "^3.5"
pytest-cov = "^2.11"
pytest-html = "^3.1"
black = "^20.8b1"
flake8 = "^3.8"
coverage = "^5.5"
isort = "^5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
